# quick_news-cutter

./: .gitignore  AGENTS.md  README.md  requirements-ai.txt  requirements-core.txt  requirements-server.txt  run_host.bat  run_host.ps1  run_host.sh  run_server.sh  server.py  server_app_web.py  test.bat  test.ps1  test.sh
_jetson_mp_css/: component.css
_jetson_mp_js/: qnc-media-pool.js
data/: project_store.db  projects.json  shell_config.json  shell_config.network-presets.example.json  shell_module_state.json  shell_runtime.db
docs/: agent-workflow.md  architecture-db-first.md  create-plugin-from-sdk-demo.md  developer-components.md  development-policy.md  (+3 more)
qnc-host/: Cargo.toml  README.md
qnc-host/scripts/: pick_folder_dark.ps1
qnc-host/src/: app_html.rs  app_state.rs  components.rs  config.rs  db_first.rs  design.rs  design_db.rs  main.rs  modules.rs  platform.rs  shell_dialog.rs  tabs.rs
qnc-host/src/asr/: mod.rs
qnc-host/src/filmstrip/: build.rs  mod.rs  store.rs  worker.rs
qnc-host/src/ingest/: api.rs  asset_row.rs  db.rs  import_worker.rs  mod.rs  scanner.rs  store.rs  thumb.rs  thumb_process.rs  worker.rs
qnc-host/src/media/: mod.rs  resolve.rs
qnc-host/src/media_pool/: api.rs  db.rs  ingest_db.rs  mod.rs  store.rs  transcripts.rs  virtual_shots.rs  workflow.rs
qnc-host/src/project/: api.rs  collab.rs  db.rs  keyboard_settings.rs  kv.rs  mod.rs  store.rs  templates.rs  ui_state.rs
qnc-host/src/routes/: design_tools.rs  mod.rs
qnc-host/src/sdk_demo/: api.rs  mod.rs  store.rs
qnc-host/src/story/: api.rs  covers.rs  db.rs  markers.rs  mod.rs
(+243 files in other folders)
